[tool.poetry]
name = "mandown"
version = "1.7.0"
description = "Comic/manga/webtoon downloader and CBZ/EPUB/MOBI/PDF converter"
authors = ["Daniel Chen <danielchen04@hotmail.ca>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/potatoeggy/mandown"
documentation = "https://github.com/potatoeggy/mandown"
keywords = ["manga", "comic", "downloader", "download", "webtoons", "webtoon"]

[tool.poetry.scripts]
mandown = "mandown.cli:main"
mandown-gui = "mandown.ui.ui:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = "^0.7.0"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^4.9.2"
Pillow = "^9.5.0"
python-slugify = "^8.0.1"
PySide6 = {version = "^6.4.0", optional = true}
natsort = "^8.1.0"
filetype = "^1.2.0"
comicon = "^1.0.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.1"
types-lxml = "^2023.3.28"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
gui = ["PySide6"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["B", "C", "E", "F", "W"]
ignore = ["B905"]
exclude = ["mandown/ui/*", "build/*"]
target-version = "py310"
line-length = 100

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"mandown/cli.py" = ["B008"]
"tests/*" = ["E501"]
