[tool.poetry]
name = "mandown"
version = "1.11.2"
description = "Comic/manga/webtoon downloader and CBZ/EPUB/MOBI/PDF converter"
authors = ["potatoeggy <eggyrules@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/potatoeggy/mandown"
documentation = "https://github.com/potatoeggy/mandown"
keywords = ["manga", "comic", "downloader", "download", "webtoons", "webtoon"]

[tool.poetry.scripts]
mandown = "mandown.cli:main"
mandown-gui = "mandown.ui.ui:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typer-slim = "^0.15.1"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
lxml = "^5.3.0"
pillow = "^11.1.0"
python-slugify = "^8.0.4"
PySide6 = { version = "^6.8.1.1", optional = true }
natsort = "^8.4.0"
filetype = "^1.2.0"
comicon = "^1.4.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0"
types-lxml = "^2024.9.16"
pytest-xdist = "^3.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-timeout = "^2.3.1"

[tool.poetry.extras]
gui = ["PySide6"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
mccabe.max-complexity = 18
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["B905"]
exclude = ["mandown/ui/*", "build/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mandown/cli.py" = ["B008"]
"tests/*" = ["E501"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[tool.pylint.MASTER]
extension-pkg-allow-list = ["lxml", "PySide6"]

[tool.pytest.ini_options]
timeout = 30
addopts = "-p coverage -p timeout"
